# Akira

./: .travis.yml  CONTRIBUTING.md  README.md  meson.build
.github/workflows/: build.yml
build-aux/flatpak/: com.github.akiraux.akira.json
rpm/: akira.spec.in  build.py.in  meson.build
src/: Window.vala
src/Layouts/Partials/: Artboard.vala  Layer.vala  TransformPanel.vala
src/Lib/: Canvas.vala
src/Lib/Managers/: ItemsManager.vala  SelectedBoundManager.vala
src/Lib/Models/: CanvasArtboard.vala  CanvasItem.vala
src/Services/: ActionManager.vala  EventBus.vala
src/Utils/: AffineTransform.vala
vapi/: goocanvas-3.0.vapi
